Fix width of blurred div

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -41,7 +41,7 @@ footer {
 #content {
     padding: 50px;
     align-self: center;
-    width: 50%;
+    width: 70%;
 }
 
 #content {
